# ComfyUI-MMS-Aligner

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
docs/superpowers/specs/: 2026-04-26-mms-aligner-design.md
nodes/: mms_aligner.py
src/: aligner.py  lang_detect.py  languages.py  model_manager.py  segmenter.py  srt_writer.py  whisper_chunker.py
