[project]
name = "comfyui-mms-aligner"
version = "0.1.0"
description = "ComfyUI custom node that force-aligns audio with text into an SRT file using Meta's MMS models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Cam Hoang" }]
keywords = ["comfyui", "mms", "forced-alignment", "srt", "subtitles", "speech"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "transformers",
    "huggingface_hub",
    "uroman",
    "lingua-language-detector",
]

[project.urls]
Repository = "https://github.com/idealweek/ComfyUI-MMS-Aligner"

[tool.comfy]
PublisherId = "idealweek"
DisplayName = "ComfyUI-MMS-Aligner"
Icon = ""
